В данном коммите: реализованы работа команд show (класс showFile), upload (класс UploadFile, download (класс DownloadFile). Внесены изменеия в класс user - добавлено автоматическое создание домшаней папки пользователя (откуда можно загружать файлы, куда скачиваются файлы), добавлена проверка корректности имен файлов, вводимых команд В связи с этим внесены изменения в  классы DClientHandler, Commands (и его наследники).
В проекте сохраняется избыточный код в части работы с файловой ситстемой и выводом сообщений пользователю -  после реализации всего функционала сервиса планирую выделить  код  в отдельные классы.